fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    @apply bg-primary font-monserat;
+    @apply bg-primary font-monserat overflow-x-hidden;
 }
